--- a/404.html
+++ b/404.html
@@ -1,5 +1,8 @@
 <html>
-    <head><title>404 Not Found</title></head>
+    <head>
+        <title>404 Not Found</title>
+        <link rel="icon" type="image/png" href="/favicon.ico">
+    </head>
     <body>
     <center><h1>404 Not Found</h1></center>
     <hr><center>openresty</center>
